# fridge

./: .gitignore  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: fridge_cmds.rs  main.rs  repl.rs  root_cmds.rs
crates/core/: Cargo.toml
crates/core/src/: dates.rs  lib.rs  model.rs  names.rs  units.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  lib.rs  schema.sql  store.rs
